# cfs-osal

src/os/posix/: CMakeLists.txt  osapi.c  osfileapi.c  osfilesys.c  osloader.c  ostimer.c
src/os/posix/unit-tests/: CMakeLists.txt
src/os/posix/unit-tests/oscore-test/: CMakeLists.txt  CTestConfig.cmake  ut_oscore_countsem_test.c  ut_oscore_misc_test.c  ut_oscore_task_test.c  ut_oscore_test.c
src/os/posix/unit-tests/osfile-test/: CMakeLists.txt  ut_osfile_dirio_test.c  ut_osfile_fileio_test.c  ut_osfile_test.c  ut_osfile_test_platforms.h
src/os/posix/unit-tests/osfilesys-test/: CMakeLists.txt  ut_osfilesys_diskio_test.c  ut_osfilesys_test.c
src/os/posix/unit-tests/osloader-test/: CMakeLists.txt  ut_osloader_symtable_test.c  ut_osloader_test.c
src/os/posix/unit-tests/osnetwork-test/: CMakeLists.txt  ut_osnetwork_misc_test.c  ut_osnetwork_test.c
src/os/posix/unit-tests/ostimer-test/: CMakeLists.txt  ut_ostimer_test.c  ut_ostimer_test_platforms.h  ut_ostimer_timerio_test.c
src/os/posix_mb/: osapi.c  osconfig_template.h  osfileapi.c  osfilesys.c  osloader.c
src/unit-tests/oscore-test/: CMakeLists.txt
